--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ img {
 }
 
 .list-description-element {
-  flex-basis: calc((100%-72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .title-second-section {
