--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,10 @@ img {
   padding: 120px 0;
 }
 
+.team-container {
+  padding: 32px 0;
+}
+
 .our-team-title {
   font-weight: 700;
   font-size: 36px;
@@ -219,6 +223,7 @@ img {
 
 .img-our-team {
   background: #fff;
+  border-radius: 0px 0px 4px 4px;
 }
 
 .command-structure {
