--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,10 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 
+.personal-card {
+  padding: 32px 0;
+}
+
 .command-structure {
   font-weight: 500;
   font-size: 20px;
@@ -234,6 +238,7 @@ img {
   text-align: center;
   color: #2e2f42;
   margin-top: 32px;
+  width: calc((100%-72px) / 4);
 }
 
 .profession {
