--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,7 @@ img {
 .img-our-team {
   background: #fff;
   border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 72px) / 4);
 }
 
 .personal-card {
@@ -238,6 +239,7 @@ img {
   text-align: center;
   color: #2e2f42;
   margin-top: 32px;
+  margin-bottom: 8px;
   width: calc((100%-72px) / 4);
 }
 
@@ -255,6 +257,7 @@ img {
 
 .portfolio-section {
   margin-bottom: 120px;
+  padding: 120px 0;
 }
 
 .our-portfolio-title {
@@ -265,7 +268,7 @@ img {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
-  padding-top: 120px;
+
   margin-bottom: 72px;
 }
 
