--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,10 @@ img {
 .img-our-portfolio {
   background-color: #fff;
 }
+.aplication {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+}
 
 .service-name {
   font-weight: 500;
@@ -289,8 +293,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-top: 32px;
-  padding-left: 16px;
+
   margin-bottom: 8px;
 }
 
