--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,7 @@ img {
 .aplication {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .service-name {
@@ -310,6 +311,7 @@ img {
 
 .footer-bg {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 
 .logo-footer {
@@ -323,6 +325,7 @@ img {
   padding-top: 100px;
   display: block;
   margin-bottom: 16px;
+  display: inline-block;
 }
 
 .logo-studio-footer {
@@ -341,6 +344,5 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding-bottom: 100px;
   width: 264px;
 }
