--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,19 @@ img {
   padding: 120px 0;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .list-description {
   display: flex;
   gap: 24px;
@@ -177,6 +190,7 @@ img {
 
 .title-second-section {
   font-weight: 500;
+  visibility: hidden;
 }
 .title-of-peculiaritie {
   font-size: 20px;
